...
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_search_24"
            app:tint="@color/colorSearchIcon"
            />
        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:hint="Search Event"
            android:background="@null"
            android:imeOptions="actionDone"
...
            android:textSize="@dimen/_13ssp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="@dimen/_8sdp"
        android:id= "@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/note_item_cell"
        />

</LinearLayout>
